tests/ui/error-codes/E0657.stderr
error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from `dyn` type
  --> $DIR/E0657.rs:10:31
   |
LL |     -> Box<for<'a> Id<impl Lt<'a>>>
   |                               ^^
   |
note: lifetime declared here
  --> $DIR/E0657.rs:10:16
   |
LL |     -> Box<for<'a> Id<impl Lt<'a>>>
   |                ^^

error[E0792]: expected generic lifetime parameter, found `'static`
  --> $DIR/E0657.rs:13:5
   |
LL |     -> Box<for<'a> Id<impl Lt<'a>>>
   |                               -- cannot use static lifetime; use a bound lifetime instead or remove the lifetime parameter from the opaque type
...
LL |     Box::new(())
   |     ^^^^^^^^^^^^

error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from `dyn` type
  --> $DIR/E0657.rs:20:35
   |
LL |         -> Box<for<'a> Id<impl Lt<'a>>>
   |                                   ^^
   |
note: lifetime declared here
  --> $DIR/E0657.rs:20:20
   |
LL |         -> Box<for<'a> Id<impl Lt<'a>>>
   |                    ^^

error[E0792]: expected generic lifetime parameter, found `'static`
  --> $DIR/E0657.rs:23:9
   |
LL |         -> Box<for<'a> Id<impl Lt<'a>>>
   |                                   -- cannot use static lifetime; use a bound lifetime instead or remove the lifetime parameter from the opaque type
...
LL |         Box::new(())
   |         ^^^^^^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0657, E0792.
For more information about an error, try `rustc --explain E0657`.
